--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,9 +1,9 @@
 <div>
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
-      <div>
+      <div *ngIf="teamMember">
         <div class="card" style="border-radius: 15px;">
-          <div class="card-body text-center" *ngIf="teamMember">
+          <div class="card-body text-center">
             <div class="mt-3 mb-4">
               <img [src]="userProfilePic"
                     style="width: 100px;" />
@@ -18,19 +18,38 @@
                 </svg>
               </a>
             </div>
-            <div class="d-flex justify-content-between text-center mt-5 mb-2">
-              <div>
-                <p class="mb-2 h5">Service</p>
-                <p class="text-muted mb-0">{{teamMember.service}}</p>
-              </div>
-              <div class="px-3">
-                <p class="mb-2 h5">Proficiency</p>
-                <p class="text-muted mb-0">{{teamMember.proficiency}}</p>
-              </div>
-              <div>
-                <p class="mb-2 h5">Team</p>
-                <p class="text-muted mb-0">{{teamMember.team}}</p>
-              </div>
+          </div>
+          <div class="card-footer tab-card-header">
+            <ul class="nav nav-tabs card-header-tabs" id="myTab" style="width: 50%; margin: auto;" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link" id="one-tab" data-toggle="tab" href="#one" role="tab" aria-controls="one" aria-selected="false">Bio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="two-tab" data-toggle="tab" href="#two" role="tab" aria-controls="two" aria-selected="false">Skill</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="three-tab" data-toggle="tab" href="#three" role="tab" aria-controls="three" aria-selected="false">Team</a>
+              </li>
+            </ul>
+          </div>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active p-3"  id="one" role="tabpanel" aria-labelledby="one-tab">
+              <h5 class="card-title">{{teamMember.first_name}} {{teamMember.last_name}} Biography</h5>
+              <p class="card-text">{{teamMember.first_name}} works with the {{teamMember.team}} team as a {{teamMember.title}}.</p>
+            </div>
+            <div class="tab-pane fade p-3" id="two" role="tabpanel" aria-labelledby="two-tab">
+              <h5 class="card-title">{{teamMember.first_name}} {{teamMember.last_name}} Skills</h5>
+                <ul class="card-text" *ngFor="let skill of skills">
+                  <li>{{skill.proficiency}} in {{skill.service}}.</li>
+                </ul>
+            </div>
+            <div class="tab-pane fade p-3" id="three" role="tabpanel" aria-labelledby="three-tab">
+              <h5 class="card-title">{{teamMember.team}}</h5>
+              <p class="card-text">{{teamMember.first_name}} is in the {{teamMember.team}} team.</p>
+            </div>
+            <div class="tab-pane fade p-3" id="four" role="tabpanel" aria-labelledby="four-tab">
+
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
