--- a/src/app/user/user-update/user-update.component.html
+++ b/src/app/user/user-update/user-update.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12 pt-5">
-    <form [formGroup]="updateForm" (ngSubmit)="onSubmit()" *ngIf="skill">
+    <form [formGroup]="updateForm" (ngSubmit)="onSubmit()" >
       <div class="form-group">
         <div class="col-xs-12">
           <label for="firstName">First Name</label>
