--- a/src/app/experts/expert-detail/expert-detail.component.html
+++ b/src/app/experts/expert-detail/expert-detail.component.html
@@ -8,12 +8,10 @@
       <span class="idd">{{newTeam.proficiency}}</span>
       <div class="d-flex flex-row justify-content-center align-items-center gap-2">
         <span class="idd1">{{newTeam.email}}</span>
-        <span>
-					<i class="fa fa-copy"></i>
-				</span>
       </div>
-      <div class=" d-flex mt-2">
-        <button class="btn1 btn-dark" style="font-style: italic">Slack</button>
+      <div class="text mt-3">
+				<span>{{newTeam.first_name}} works as a {{newTeam.title}} in the {{newTeam.team}} team.
+				</span>
       </div>
       <div class="text mt-3">
 				<span>{{newTeam.first_name}} works as a {{newTeam.title}} in the {{newTeam.team}} team.
