--- a/src/app/experts/expert-detail/expert-detail.component.html
+++ b/src/app/experts/expert-detail/expert-detail.component.html
@@ -10,7 +10,7 @@
         <span class="idd1">{{newTeam.email}}</span>
       </div>
       <div class="text mt-3">
-				<span>{{newTeam.first_name}} is {{(selectedSkill$ | async)?.proficiency}} at {{ (selectedSkill$ | async)?.service }}.
+				<span>{{newTeam.first_name}} is an {{(selectedSkill$ | async)?.proficiency}} at {{ (selectedSkill$ | async)?.service }}.
 				</span>
       </div>
       <div class="text mt-3">
