--- a/src/app/teams/team-search/team-search.component.html
+++ b/src/app/teams/team-search/team-search.component.html
@@ -10,9 +10,9 @@
         <th scope="col">Market</th>
       </tr>
       </thead>
-      <tbody *ngFor="let team of teams | filter:searchText">
+      <tbody *ngFor="let team of teams; let i = index">
       <tr (click)="showRow(team)">
-        <th scope="row" class="counterCell"></th>
+        <th scope="row" class="counterCell">{{i+1}}</th>
         <td>{{team.PK}}</td>
         <td>{{team.Biography}}</td>
         <td>{{team.Competencies}}</td>
